--- a/faperta/templates/faperta-muka.html
+++ b/faperta/templates/faperta-muka.html
@@ -9,44 +9,101 @@
 <body>
     <center>
     <h1>Fakultas Pertanian</h1>
+<img src="\static\images\faperta.jpg" height="350px">
+<p>Fakultas Pertanian Untirta Sindangsari Integrated Campus (Kampus E)</p>
+</center>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Sejarah Singkat</h3>
+</center>
+<p style="text-align: justify;">Universitas Sultan Ageng Tirtayasa dimulai dengan berdirinya Yayasan Pendidikan Tirtayasa pada tanggal 1 Oktober 1980 berdasarkan Akte Notaris No: 1 Tahun 1980, kemudian dilakukan penyempurnaan dan dikukuhkan kembali dengan akte Notaris Ny. R.Arie Soetardjo, Nomor 1, Tanggal 3 Maret 1986.</p>
+<p style="text-align: justify;">Langkah awal Yayasan Pendidikan Tirtayasa mendirikan Sekolah Tinggi Ilmu Hukum (STIH) pada tahun 1981 disusul dengan pendirian Sekolah Tinggi Keguruan dan Ilmu Pendidikan (STKIP) pada tahun 1982. Berbarengan dengan pendiran STKIP, Yayasan Krakatau Steel Cilegon mendirikan Sekolah Tinggi Teknik (STT) yang selanjutnya STT bergabung dengan Yayasan Pendidikan Tirtayasa untuk persiapan berdirinya Universitas Tirtayasa Serang – Banten. 
+    Universitas Tirtayasa Serang Banten merupakan merupakan penggabungan dari STIH, STT dan STKIP berdasarkan Surat Keputusan Mendikbud RI Nomor; 0596/0/1984, tanggal 28 November 1984, maka berubahlah status masing-masing sekolah tinggi menjadi Fakultas Hukum, Fakultas Teknik, dan Fakultas Ilmu Keguruan dan Ilmu Pendidikan (FKIP).</p>
+<p style="text-align: justify;">Fakultas Pertanian Universitas Sultan Ageng Tirtayasa merupakan salah satu Fakultas yang ada di lingkungan Universitas Sultan Ageng Tirtayasa yang pada awalnya didirikan berdasarkan SK Ketua Yayasan Pendidikan Tirtayasa Nomor : 020/YPT/VIII/1984 tanggal 31 Agustus 1984 dengan Jurusan Sosial Ekonomi Pertanian Program Studi Sosial Ekonomi Pertanian.</p>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Pimpinan</h3>
+</center>
+<h4>Dekanat</h4>
+<img src="\static\images\dekanat faperta.png" height="250px">
+<p>Prof. Dr. Ir. Nurmayulis, MP</p>
+<h4>Dekan</h4>
+<table>
+    <tr>
+        <td>
+            <img src="\static\images\dekan 1 faper.png" height="250px">
+            <p>Dr. Susiyanti, SP., MP</p>
+            <p>(Wakil Dekan Bidang Akademik)</p>
+        </td>
+        <td>
+            <img src="\static\images\dekan 2 faper.jpg" height="250px">
+            <p>Dr. H.Yudi LA Salampessy, SE., M.Si</p>
+            <p>(Wakil Dekan Bid.Umum dan Keuangan)</p>
+        </td>
+        <td>
+            <img src="\static\images\dekan 3 faper.jpg" height="250px">
+            <p>Dr.nat.techn Weksi Budiaji, S Si., M.Sc</p>
+            <p>(Wakil Dekan Bidang Kemahasiswaan)</p>
+        </td>
+    </tr>
+</table>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Visi dan Misi</h3>
     </center>
-    <div class="nav">
-        <ul>
-            <li><a href="">Jurusan</a></li>
-            <li><a href="">Lokasi</a></li>
-            <li><a href="">Sosial Media</a></li>
-        </ul>
-    </div>
+    
+    <h4>Visi Faperta Untirta 2019-2023</h4>
+    <p style="text-align: justify;">Pada tahun 2030 menjadi institusi Pendidikan tinggi pertanian yang unggul,
+         berkarakter, berdaya saing, dan berperan aktif dalam pengembangan 
+         IPTEK menuju Smart and Sustainable Agriculture</p>
+    <h4>Misi Faperta Untirta 2019-2023</h4>
+    <ol>
+        <li>Menyelenggarakan pengembangan sumber daya manusia pertanian yang unggul, berkarakter, dan berdaya saing dalam penguasaan IPTEK- Smart and Sustainable Agriculture</li>
+        <li>
+            Meningkatkan kuantitas dan kualita penelitian dan pengabdian kepada masyarakat melalui inovasi IPTEK- Smart and Sustainable Agriculture
+        </li>
+    <li>
+        Menyelenggarakan tata Kelola institusi yang baik, efektif, dan efisien melalui pemanfaatan teknologi informasi dan komunikasi.
+    </li>
+    </ol>
+    <hr>
+    <br>
+    <hr>
+    
+<center>
+<h3>Akademik</h3>
+</center>
+<h4>Program S1</h4>
+<ol>
+    <li>Agribisnis</li>
+    <li>Agroekoteknologi</li>
+    <li>Ilmu Perikanan</li>
+    <li>Teknologi Pangan</li>
+</ol>
+<h4>Program S2</h4>
+<ol>
+    <li>Ilmu Pertanian</li>
+</ol>
+<hr>
+<br>
+<hr>
 
-   
+
 </body>
 </html>
 
 <style>
-    .nav{
-        background-color: bisque;
-    }
-    ul{
-        list-style-type: none;
-        padding-left: 10px;
-    }
-    li{
-        margin-bottom: 10px;
-        text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-top: 10px;
-        display: inline-block;
-        width: 100px;
-        height: 35px;
-    }
-    a{
-        color: black;
-        text-decoration: none;
-    }
-    li:hover{
-        background-color: cornsilk;
-        cursor: pointer;
-        transition: 0.5s;
+    body {
+        background-image: linear-gradient(to right, #ffaebc, #6af2f0);
+			-webkit-text-size-adjust: 100%;
+            font-family: 'GILL sans', 'GILL Sans MT', Calibri, 'Trebuchet MS';
+      margin-left: 40px;
+      margin-right: 40px;
     }
 </style>
