--- a/feb/templates/feb-muka.html
+++ b/feb/templates/feb-muka.html
@@ -9,42 +9,106 @@
 <body>
     <center>
     <h1>Fakultas Ekonomi dan Bisnis</h1>
+    <br>
+    <img src="\static\images\feb.jpg" height="280px">
+    <p>Fakultas Ekonomi dan Bisnis Universitas Sultan Ageng Tirtayasa (Pakupatan)</p>
     </center>
-    <div class="nav">
-        <ul>
-            <li><a href="">Jurusan</a></li>
-            <li><a href="">Lokasi</a></li>
-            <li><a href="">Sosial Media</a></li>
-        </ul>
-    </div>
+    <hr>
+    <br>
+    <hr>
+    <center>
+    <h3>Sejarah Singkat</h3>
+</center>
+    <p style="text-align: justify;">
+        Fakultas Ekonomi Universitas Sultan Ageng Tirtayasa (UNTIRTA) merupakan Lembaga Pendidikan Tinggi, yang pada awal pendiriannya bernaung di bawah Yayasan Pendidikan Tirtayasa (Yapenta). Yapenta sendiri merupakan yayasan yang telah berdiri pada tanggal 1 Oktober 1980, berdasarkan Akte Notaris Nomor 1 tahun 1980. 
+        Kemudian dilakukan penyempurnaan dengan pengukuhan kembali Akte Notaris Ny. R. Arie Soetardjo, Nomor 1, tanggal 3 Maret 1986. Pada tahun 1981, Yapenta mendirikan Sekolah Tinggi Ilmu Hukum (STIH) disusul pada tahun 1982 dengan pendirian Sekolah Tinggi Keguruan dan Ilmu Pendidikan (STKIP). Sementara pada waktu bersamaan Yayasan Krakatau Steel Cilegon mendirikan Sekolah Tinggi Teknik (STT). 
+        Kemudian STT di bawah Yayasan Krakatau Steel Cilegon bergabung dengan Yapenta untuk persiapan berdirinya Universitas Tirtayasa Serang Banten. Berdasarkan Surat Keputusan Menteri Pendidikan dan Kebudayaan RI Nomor: 0596/0/1984, tanggal 28 November 1984, terbentuk Universitas Tirtayasa Serang Banten yang merupakan penggabungan dari STIH, STT, dan STKIP, dan perubahan status sekolah tinggi menjadi Fakultas Hukum, Fakultas Keguruan dan Ilmu Pendidikan (FKIP) dan Fakultas Teknik.
+    </p>
+    <p style="text-align: justify;">
+        Pada tanggal 22 September 2008 dengan Nomor SK: 3397D/T/2008 Fakultas Ekonomi UNTIRTA membuka Program Studi Ilmu Ekonomi Pembangunan. Pada tanggal 24 Oktober 2013, Program Studi Ilmu Ekonomi Pembangunan ditingkatkan statusnya menjadi Jurusan Ilmu Ekonomi Pembangunan. 
+        Pada tahun 2009 dan 2010, Fakultas Ekonomi UNTIRTA membuka Program Diploma, yang terdiri dari; Prodi DIII Akuntansi, Prodi DIII Marketing, Prodi DIII Keuangan dan Perbankan, serta Prodi DIII Perpajakan. Pada tahun 2015, berdasarkan Surat Keputusan Rektor No.057/UN43/KR/SK/2015, Fakultas Ekonomi UNTIRTA, berganti nama menjadi Fakultas Ekonomi dan Bisnis Universitas UNTIRTA. 
+        Pada tahun 2015, Fakultas Ekonomi UNTIRTA membuka Program Studi Ekonomi Syariah.
+    </p>
+    <hr>
+    <br>
+    <hr>
+    <center>
+        <h3>Pimpinan</h3>
+    </center>
+    <h4>Denakat</h4>
+    <img src="\static\images\dekanat feb.png" height="250px">
+    <p>Dr. H. Akhmadi, S.E., M.M.</p>
+    <h4>Dekan</h4>
+    <table>
+        <tr>
+        <td>
+    <img src="\static\images\dekan 1 feb.png" height="250px">
+    <p>Dr. Indra Suhendra, S.E., M.Si.</p>
+    <p>(Wakil Dekan Bidang Akademik, Pengembangan Inovasi, Pengabdian, dan Hilirisasi Riset)</p>
+</td>
+<td>
+    <img src="\static\images\dekan 2 feb.png" height="250px">
+    <p>Bambang Mahmudi, S.E., M.M.</p>
+    <p>(Wakil Dekan Bidang Administrasi Umum, Perencanaan, Pengelolaan Keuangan, SDM dan Fasilitas)</p>
+</td>
+</tr>
+</table>
+<img src="\static\images\dekan 3 feb.png" height="250px">
+<p>Dr. Moh. Mukhsin, S.E., M.M.</p>
+<p>(Wakil Dekan Bidang Kemahasiswaan, Alumni dan Kemitraan)</p>
+    <hr>
+    <br>
+    <hr>
+    <center>
+        <h3>Visi dan Misi</h3>
+    </center>
+    <br>
+    <h4>Visi Feb Untirta 2019-2023</h4>
+    <p>Menjadi Fakultas yang Unggul dalam Bidang Ekonomi dan Bisnis di Kawasan ASEAN Tahun 2030</p>
+    
+
+    <h4>Misi Feb Untirta 2019-2023</h4>
+    <ol>
+        <li>Meningkatkan kualitas pengetahuan melalui pendidikan profesional dengan terus mengembangkan berbagai sumber daya pembelajaran dan relevansi untuk menghasilkan lulusan yang unggul dalam bidang Ekonomi dan Bisnis</li>
+        <li>Meningkatkan kualitas dan kuantitas penelitian dan pengabdian kepada masyarakat dalam bidang ekonomi dan bisnis dengan terus menciptakan suasana akademik dan lingkungan kolaboratif yang terbuka, untuk pertukaran gagasan secara bebas dan bermartabat </li>
+        <li>Menghasilkan lulusan yang unggul, berkarakter dan berdaya saing dalam bidang ekonomi dan bisnis di kawasan ASEAN</li>
+        <li>
+            Mewujudkan tata kelola fakultas yang transparan, akuntabel dan profesional untuk mendukung implementasi Integrated Smart and Green (It’S Green) University
+        </li>
+    </ol>
+    <hr>
+    <br>
+    <hr>
+    <center>
+        <h3>Akademik</h3>
+    </center>
+    <h4>Diploma (D3)</h4>
+    <ol>
+        <li>Akuntansi</li>
+        <li>Manajemen Pemasaran</li>
+        <li>Perpajakan</li>
+        <li>Keuangan Perbankan</li>
+    </ol>
+    <h4>Sarjana</h4>
+    <ol>
+        <li>Akuntansi</li>
+        <li>Manajemen Pemasaran</li>
+        <li>Perpajakan</li>
+        <li>Keuangan Perbankan</li>
+    </ol>
+    <hr>
+    <br>
+    <hr>
+
 </body>
 </html>
 
 <style>
-    .nav{
-        background-color: bisque;
-    }
-    ul{
-        list-style-type: none;
-        padding-left: 10px;
-    }
-    li{
-        margin-bottom: 10px;
-        text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-top: 10px;
-        display: inline-block;
-        width: 100px;
-        height: 35px;
-    }
-    a{
-        color: black;
-        text-decoration: none;
-    }
-    li:hover{
-        background-color: cornsilk;
-        cursor: pointer;
-        transition: 0.5s;
+body {
+        background-image: linear-gradient(to right, #ffaebc, #6af2f0);
+			-webkit-text-size-adjust: 100%;
+            font-family: 'GILL sans', 'GILL Sans MT', Calibri, 'Trebuchet MS';
+      margin-left: 40px;
+      margin-right: 40px;
     }
 </style>
