--- a/fh/templates/fh-muka.html
+++ b/fh/templates/fh-muka.html
@@ -8,43 +8,99 @@
 </head>
 <body>
     <center>
-    <h1>Fakultas Kedokteran</h1>
+    <h1>Fakultas Hukum</h1>
+    <img src="\static\images\fh.jpg" height="280px">
+    <p>Fakultas Hukum (Pakupatan)</p>
     </center>
-    <div class="nav">
-        <ul>
-            <li><a href="">Jurusan</a></li>
-            <li><a href="">Lokasi</a></li>
-            <li><a href="">Sosial Media</a></li>
-        </ul>
-    </div>
+    <hr>
+    <br>
+    <hr>
+    <center>
+    <h3>Sejarah Singkat</h3>
+    </center>
+    <p style="text-align: justify;">Fakultas Hukum Universitas Sultan Ageng Tirtayasa Banten berdiri tahun 1981, tepatnya pada tanggal 1 Oktober 1981 dengan status sebagai STIH Serang yan bertempat di Kresidenan Banten, Jl. K.H. 
+        Sam’un dan merupakan embrio lahirnya Universitas Sultan Ageng Tirtayasa Banten. Mulai tahun 1984, STIH Serang di integrasi sesuai dengan SK Mendikbud No. 0596/0/1984, menjadi Fakultas Hukum Universitas Sultan Ageng Tirtayasa Banten, yang bertempat di Jl. Raya Jakarta KM. 4 Pakupatan – Serang.</p>
+ <p style="text-align: justify;">Fakultas Hukum pada tahun 1994 memperoleh status terdaftar berdasarkan SK Mendikbud No. 0597/0/1984. Pada tahun 1994 Fakultas Hukum kembali memperoleh status penetapan terdaftar kembali berdasarkan SK Ditjen Pendidikan Tinggi No. 059/Dikti/Kep./1994. 
+    Pada tahun 2000 Fakultas Hukum memperoleh status terakreditasi dengan peringkat B, berdasarkan SK BAN-PT No. 19/BAN-PT/AK-IV/VIII/2000, dengan adanya SK Akreditasi tersebut maka Fakultas Hukum dapat menyelenggarakan proses pembelajaran secara mandiri.</p>
+<p style="text-align: justify;">Pada tahun 2001 status Fakultas Hukum menjadi Fakultas Hukum dari Universitas Sultan Ageng Tirtayasa Banten dengan Status Negeri, berdasarkan Kepres No. 32/2001, hingga saat ini dan beralamat di Jl. Raya Jakarta KM. 4 Pakupatan–Serang. Saat ini  fakultas Hukum terakreditasi peringkat B berdasarkan SK. No. 186/SK/BAN-PT/Ak-SURV/S/VI/2014 tertanggal 28 Juni 2014.</p>
+<p style="text-align: justify;">Fakultas Hukum Universitas Sultan Ageng Tirtayasa (FH Untirta) saat ini telah berupaya menata diri menjadikan dirinya salah satu Perguruan Tinggi Negeri yang dikenal pada skala nasional. 
+    Dalam Perjalanannya sebagai Perguruan Tinggi Negeri yang baru beralih dari PTS pada tahun 2001, Fakultas Hukum Untirta telah banyak melakukan perubahan dengan mengacu pada sistem pengelolaan Perguruan Tinggi Negeri.</p>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Pimpinan</h3>
+</center>
+<h4>Dekanat</h4>
+<img src="\static\images\dekan fh.png" height="250px">
+<p>Dr. Agus Prihartono PS, S.H., M.H</p>
+<h4>Dekan</h4>
+<table>
+    <tr>
+        <td><img src="\static\images\dekan 1 fh.jpeg" height="250px">
+        <p>Ridwan, S.H., M.H</p>
+        <p>(Wakil Dekan I Bidang Akademik, Pengembangan Inovasi Pengabdian Dan Hilirisasi Riset)</p>
+    </td>
+    <td>
+        <img src="\static\images\dekan 2 fh.png" height="250px">
+        <p>Rully Syahrul Mucharom, S.H., M.H.</p>
+        <p>(Wakil Dekan II Bidang Administrasi Umum, Perencanaan, Pengelolaan Keuangan, SDM Dan Fasilitas)</p>
+    </td>
+    <td>
+        <img src="\static\images\dekan 3 fh.jpg" height="250px">
+        <p>Dr. Rena Yulia, S.H., M.H.</p>
+        <p>(Wakil Dekan III Bidang Kemahasiswaan, Alumni dan Penguatan Kemitraan)</p>
+    </td>
+    </tr>
+</table>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Visi dan Misi</h3>
+</center>
+<h4>Visi Fh Unitirta 2019-2023</h4>
+<p>Mewujudkan Fakultas Hukum Untirta yang Unggul, Berbasis Kearifan Lokal, dan Berdaya Saing untuk Mendukung Untirta Sebagai Integrated Smart and Green (It’S Green) University Di Tingkat ASEAN Tahun 2030</p>
+<h4>Misi Fh Untirta 2019-2023</h4>
+<ol>
+    <li>Meningkatkan Kualitas Lulusan Fakultas Hukum yang Unggul, Berkarakter dan Berdaya Saing Di Tingkat Nasional dan Asia Tenggara</li>
+    <li>Meningkatkan Kualitas Dosen Fakultas Hukum dalam Penelitian dan Pengabdian Di Tingkat Nasional dan Asia Tenggara</li>
+    <li>
+        Meningkatkan Daya Mutu Akademik dan Prinsip – Prinsip Tata Kelola Fakultas serta Menjamin Peningkatan Akreditasi Institusi
+    </li>
+</ol>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Akademik</h3>
+</center>
+<h4>Sarjana (S1)</h4>
+<ol>
+    <li>Hukum Ketenagakerjaan</li>
+    <li>Hukum Kedokteran dan Kehakiman</li>
+    <li>Pengantar Ilmu Hukum</li>
+    <li>Pengantar Hukum Indonesia</li>
+    <li>Legal Contract</li>
+    <li>Sistem Peradilan Anak</li>
+    <li>Ilmu Perundang-undangan</li>
+    <li>Hukum Agraria</li>
+    <li>Litigasi</li>
+    <li>Hukum Pidana Islam</li>
+</ol>
+<hr>
+<br>
+<hr>
+
 </body>
 </html>
 
 <style>
-    .nav{
-        background-color: bisque;
-    }
-    ul{
-        list-style-type: none;
-        padding-left: 10px;
-    }
-    li{
-        margin-bottom: 10px;
-        text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-top: 10px;
-        display: inline-block;
-        width: 100px;
-        height: 35px;
-    }
-    a{
-        color: black;
-        text-decoration: none;
-    }
-    li:hover{
-        background-color: cornsilk;
-        cursor: pointer;
-        transition: 0.5s;
+body {
+        background-image: linear-gradient(to right, #ffaebc, #6af2f0);
+			-webkit-text-size-adjust: 100%;
+            font-family: 'GILL sans', 'GILL Sans MT', Calibri, 'Trebuchet MS';
+      margin-left: 40px;
+      margin-right: 40px;
     }
 </style>
