--- a/ft/templates/ft-muka.html
+++ b/ft/templates/ft-muka.html
@@ -9,42 +9,97 @@
 <body>
     <center>
     <h1>Fakultas Teknik</h1>
+    <img src="\static\images\ft.jpeg" height="280px">
+    <p>Fakultas Teknik (Cilegon)</p>
 </center>
-<div class="nav">
-    <ul>
-        <li><a href="">Jurusan</a></li>
-        <li><a href="">Lokasi</a></li>
-        <li><a href="">Sosial Media</a></li>
-    </ul>
-</div>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Sejarah Singkat</h3>
+</center>
+<p style="text-align: justify;">Berdirinya Fakultas Teknik diawali dengan berdirinya Sekolah Tinggi Teknologi yang didirikan oleh PT. Krakatau Steel pada tahun 1982dengan ijin penyelenggaraan untuk tingkat Sarjana Muda (Non Gelar) dari Kopertis Wilayah IV Jawa Barat Nomor : 040/1982. 
+    Kemudian padatahun 1984 berdasarkan Surat Keputusan Menteri Pendidikan dan Kebudayaan RI Nomor: 0596/O/1984 tanggal 28 Nopember 1984, SekolahTinggi Teknologi menggabungkan diri ke dalam Universitas Tirtayasa Banten dengan status terdaftar. Selanjutnya, dengan keluarnya SuratKeputusan Presiden Republik Indonesia Nomor 32 tanggal 19 Maret tahun 2001 maka Universitas Sultan Ageng Tirtayasa menjadi PerguruanTinggi Negeri di lingkungan Departemen Pendidikan Nasional.</p>
+<p style="text-align: justify;">Kampus FT. Untirta berada dalam Kawasan Industri Cilegon, dimana pada kawasan ini terdapat berbagai macam industri logam berat,kimia,
+    manufacture
+    ,
+    engineering 
+     dan pembangkit listrik, diantaranya PT. Krakatau Steel & Group, PT. Krakatau Posco, PT. Candra Asri, PT.Asahimas, PT. Tri Polita, PT. PLN (Persero) PLTGU Cilegon, PT. Indonesia Power UBP Suralaya dan sebagainya. Secara geografis, FakultasTeknik Untirta berada pada gerbang dan lintasan perdagangan Jawa-Sumatera serta lintas perdagangan internasional, yaitu dengan adanya pelabuhan penyeberangan ASDP di Merak serta beberapa pelabuhan internasional diantaranya Cigading, Bojonegara dan Krakatau BandarSamudra. Secara administratif, Fakultas Teknik Untirta berada di Kota Cilegon dan Provinsi Banten yang terus berkembang.</p>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Pimpinan</h3>
+</center>
+<h4>Dekanat</h4>
+<img src="\static\images\dekanat ft.jpg" height="250px">
+<p>Prof. Dr. -Ing. Ir. Asep Ridwan, ST., MT., IPM</p>
+<h4>Dekan</h4>
+<table>
+    <tr>
+        <td>
+            <img src="\static\images\dekan 1 ft.jpeg" height="250px">
+            <p>Prof. Dr. Ir. Supriyanto, ST., M.Sc., IPM</p>
+            <p>(Wakil Dekan bidang Akademik, Pengembangan Inovasi, Pengabdian dan Hilirisasi Riset)</p>
+        </td>
+        <td>
+            <img src="\static\images\dekan 2 ft.jpg" height="250px">
+            <p>Dr. Ir. Sirajuddin, ST., MT</p>
+            <p>(Wakil Dekan bidang Administrasi Umum, Perencanaan, Pengelolaan Keuangan, SDM dan Fasilitas)</p>
+        </td>
+        <td>
+            <img src="\static\images\dekan 3 ft.jpg" height="250px">
+            <p> Ir. Agus Pramono, ST., MT., PhD.Tech</p>
+            <p>(Wakil Dekan Bidang Kemahasiswaan, Pengembangan Karir dan Hubungan Alumni Serta Kemitraan)</p>
+        </td>
+    </tr>
+</table>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Visi dan Misi</h3>
+</center>
+<h4>Visi Ft Untirta 2019-2023</h4>
+<p>Terwujudnya Fakultas Teknik UNTIRTA yang UNGGUL, SMART, dan GREEN di Kawasan ASEAN Tahun 2030</p>
+<h4>Misi Ft Untirta 2019-2023</h4>
+<ol>
+    <li>Meningkatkan mutu, relevansi dan daya saing pendidikan serta lulusan yang kompetitif dan berdaya juang tinggi</li>
+    <li>Meningkatkan kualitas dan kuantitas riset dan pengabdian masyarakat yang inovatif  dan aplikatif</li>
+    <li>Meningkatkan daya dukung tatakelola fakultas teknik sebagai wujud fakultas yang Smart, Green dan Terintegrasi</li>
+</ol>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Akademik</h3>
+</center>
+<h4>Sarjana (S1)</h4>
+<ol>
+    <li>Teknik Industri</li>
+    <li>Teknik Sipil</li>
+    <li>Teknik Elektro</li>
+    <li>Teknik Mesin</li>
+    <li>Teknik Kimia</li>
+    <li>Teknik Metalurgi</li>
+    <li>Informatika</li>
+</ol>
+<hr>
+<br>
+<hr>
+
+
+
+
 </body>
 </html>
 
 <style>
-    .nav{
-        background-color: bisque;
-    }
-    ul{
-        list-style-type: none;
-        padding-left: 10px;
-    }
-    li{
-        margin-bottom: 10px;
-        text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-top: 10px;
-        display: inline-block;
-        width: 100px;
-        height: 35px;
-    }
-    a{
-        color: black;
-        text-decoration: none;
-    }
-    li:hover{
-        background-color: cornsilk;
-        cursor: pointer;
-        transition: 0.5s;
+  body {
+        background-image: linear-gradient(to right, #ffaebc, #6af2f0);
+			-webkit-text-size-adjust: 100%;
+            font-family: 'GILL sans', 'GILL Sans MT', Calibri, 'Trebuchet MS';
+      margin-left: 40px;
+      margin-right: 40px;
     }
 </style>
