--- a/pascasarjana/templates/pascasarjana-muka.html
+++ b/pascasarjana/templates/pascasarjana-muka.html
@@ -9,42 +9,100 @@
 <body>
     <center>
     <h1>Pasca Sarjana</h1>
+    <img src="\static\images\pasca 2.jpg" height="300px">
+    <p>Pasca Sarjana (Gedung C)</p>
     </center>
-    <div class="nav">
+    <hr>
+    <br>
+    <hr>
+
+<center>
+    <h3>Sejarah Singkat</h3>
+</center>
+<p style="text-align: justify;">Setelah Universitas Sultan Ageng Tirtayasa berubah menjadi Perguruan Tinggi Negeri mengalami beberapa perubahan yang lebih baik. Perubahan ini menuntut Sivitas akademika mengembangkan misi yang sesuai dengan misi Kementerian Pendidikan dan Kebudayaan yang tercantum dalam lima pilar yaitu: 1) ketersediaan, 2) keterjangkauan, 3) kualitas (mutu dan relevansi), 4) keterjaminan, dan 5) kesetaraan. perluasan akses dan p
+    emerataan,ketersediaan, dan keterjangkauan menuntut untirta untuk menyusun program berdasarkan pilar tersebut. oleh karena itu,pen
+    erimaan mahasiswa S1 pun dari tahun ke tahun semakin kompetitif dan mempertimbangkan hal-hal diatas,sehingga tersedia ruang yang terbuka bagi calon mahasiswa baik yang kemampuan ekonominya terbatas maupun berekonomi tinggi. atas dasar itu pulka menuntut untirta untuk menyediakan akses studi lanjut bagi mahasiswa S1. Lulusan yang kian tahun kian meningkat ditambah juga lulusan dari perguruan tinggi lain di propinsi Banten yang makin meningkat pula sehingga tuntutan masyarakat memperoleh kesempatan studi lanjut juga kian bertambah.</p>
+<p style="text-align: justify;">Perkembangan di atas, menjadi tuntutan civitas akademika Universitas Sultan Ageng Tirtayasa untuk membuka Pascasarjana. oleh karena itu, pada tahun 2005 Untirta bekerja sama dengan Universitas Negerei Jakarta membuka S2 program studi Manajemen Pendidikan dan Pendidikan Bahasa telah meluluskan dua angkatan.Berbekal penga
+    laman bekerjasama dengan program pascasarjana Universitas Negeri Jakarta pada tahun 2007, Untirta mengajukan ijin operasional dua program studi,yaitu:1)Teknologi Pembelajaran (TPM) dan 2)Pendidikan Bahasa indonesia (PBI).kedua program studi ini memperoleh ijin operasional pada tahun 2008.Program Studi Pendidikan Bahasa Indonesia beroleh ijin operasional nomor 3397D/T/2008 saat ini kedua program studi tersebut telah terakreditasi BAN PT. Program studi Pendidikan Bahasa Indonesia terakreditasi dengan nomor 022/BAN/-PT/AK-IX/S2/X/2011 dan Program Studi Tekn
+    ologi Pembelajaran terakreditasi dengan nomor 012/SK/BAN-PT/AK-X/M/I/2013.</p>
+<hr>
+<br>
+<hr>
+<center><h3>Visi dan Misi </h3></center>
+<h4>Visi Pasca Sarjana Untirta</h4>
+<p>Menjadi Pascasarjana yang Bermutu dan Berdaya Saing Global pada Tahun 2025</p>
+<h4>Misi Pasca Sarjana Untirta</h4>
+<ol>
+    <li>Menyelenggarakan Pendidikan Pascasarjana yang Berkualitas.</li>
+    <li>Melakukan penelitian dalam rangka mengembangkan ilmu pengetahuan dan teknologi dalam rangka meningkatkan 
+        kualitas hidup yang berwawasan global.</li>
+        <li>Menyelenggarakan pengabdian kepada masyarakat berbas
+            is penelitian yang dapat memberikan kontribusi bagi masyarakat.</li>
+    <li>Menjalin jejaring kerja sama dengan masyarakat ilmiah tingkat nasional dan internasional.</li>
+</ol>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Akademik</h3>
+</center>
+<h4>Doktor (S3)</h4>
+<ol>
+    <li>Program Studi Doktor Pendidikan</li>
+    <li>Program Studi Doktor Ilmu Akuntansi</li>
+    <li>Program Studi Doktor Ilmu Pertanian</li>
+</ol>
+<h4>Magister (S2)</h4>
+<ol>
+    <li>Pendidikan Bahasa Indonesia</li>
+    <li>Teknologi Pendidikan
         <ul>
-            <li><a href="">Jurusan</a></li>
-            <li><a href="">Lokasi</a></li>
-            <li><a href="">Sosial Media</a></li>
+            <li>Konsentrasi Manajemen Pendidikan</li>
+            <li>Konsentrasi PAUD</li>
         </ul>
-    </div>
+    </li>
+    <li>Hukum
+        <ul>
+            <li>Konsentrasi Hukum Pidana</li>
+            <li>Konsentrasi Hukum Perdata</li>
+            <li>Konsentrasi Hukum Tata Negara</li>
+            <li>Konsentrasi Hukum Kesehatan</li>
+        </ul>
+    </li>
+    <li>Administrasi Publik</li>
+    <li>Akuntansi</li>
+    <li>
+        Manajemen
+        <ul>
+            <li>Konsentrasi Manajemen Pemasaran</li>
+            <li>Konsentrasi Manajemen SDM</li>
+            <li>Konsentrasi Manajemen Keuangan</li>
+        </ul>
+    </li>
+    <li>Pendidikan Bahasa Inggris</li>
+    <li>Pendidikan Matematika</li>
+    <li>Ilmu Pertanian</li>
+    <li>Ilmu Komunikasi</li>
+    <li>Teknik Kimia</li>
+    <li>Pendidikan Dasar</li>
+    <li>Ekonomi</li>
+</ol>
+<hr>
+<br>
+<hr>
+
+
+
+
 </body>
 </html>
 
 <style>
-    .nav{
-        background-color: bisque;
-    }
-    ul{
-        list-style-type: none;
-        padding-left: 10px;
-    }
-    li{
-        margin-bottom: 10px;
-        text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-top: 10px;
-        display: inline-block;
-        width: 100px;
-        height: 35px;
-    }
-    a{
-        color: black;
-        text-decoration: none;
-    }
-    li:hover{
-        background-color: cornsilk;
-        cursor: pointer;
-        transition: 0.5s;
+      body {
+        background-image: linear-gradient(to right, #ffaebc, #6af2f0);
+			-webkit-text-size-adjust: 100%;
+            font-family: 'GILL sans', 'GILL Sans MT', Calibri, 'Trebuchet MS';
+      margin-left: 40px;
+      margin-right: 40px;
     }
 </style>
