--- a/fisip/templates/fisip-muka.html
+++ b/fisip/templates/fisip-muka.html
@@ -9,42 +9,85 @@
 <body>
     <center>
     <h1>Fakultas Ilmu Sosial dan Ilmu Politik</h1>
+    <img src="\static\images\fisip.png" height="250px">
+    <p>Falkultas Ilmu Sosial dan Politik (Sindangsari)</p>
 </center>
-<div class="nav">
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Sejarah Singkat</h3>
+</center>
+    <p style="text-align: justify;">Pada saat Universitas Sultan Ageng Tirtayasa (Untirta) sedang mempersiapkan pengalihan status negeri secara utuh dan menyeluruh dengan ditandainya pengalihan aset dan pengelolaan sumber daya dari Yayasan Pendidikan Tirtayasa kepada pemerintah yang dilaksanakan paling lama dalam kurun waktu tiga tahun. Maka pada tanggal 10 Juni 2003 dikeluarkan Surat Keputusan dari DIRJEN DIKTI DEPDIKNAS dengan nomor 1179/D/ T/2003 tentang izin operasional program studi Ilmu Administrasi Negara dan Ilmu Komunikasi, seiring dengan operasional program studi maka Fakultas Ilmu Sosial dan Ilmu Politik didirikan pada tahun akademik 2002/2003  yang mendapat legitimasi menjadi bagian dari Untirta dengan surat keputusan nomor 124/0/2004 sesuai dengan SOTK.</p>
+    <p style="text-align: justify;">Pada tanggal 1 Februari 2006 telah dikeluarkan SK No. 295/D/T/2006 tentang Perpanjangan izin penyelenggaraan Program studi  Ilmu Administrasi Negara dan Ilmu Komunikasi selama 4 tahun.
+
+        FISIP Untirta terus berpacu dan berkembang untuk berusaha mensejajarkan diri dengan fakultas yang lebih dulu berdiri dengan mengeluarkan jurus-jurus strategis baik dibidang pendidikan, pengajaran, pengabdian masyarakat, sarana dan prasarana sebagai wujud dari Tri Dharma Perguruan Tinggi.</p>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Visi dan Misi</h3>
+</center>
+<h4>Visi Fisip Untirta 2019-2023</h4>
+<p>Menjadikan FISIP Untirta Sebagai Pelopor Integrated, Smart and Green University yang Unggul, Berkarakter dan Berdaya Saing di kawasan ASEAN pada bidang kajian Ilmu Sosial dan Ilmu Politik 2030</p>
+<h4>Misi Fisip Untirta 2019-2023</h4>
+<ol>
+    <li>Menyelaraskan proses pendidikan dengan sistem pembelajaran daring Indonesia dan bahan ajar berbasis riset, serta kurikulum berorientasi industri 4.0</li>
+    <li>Membangun kemitraan strategis dengan institusi nasional dan internasional dalam kegiatan applied research dan publikasi ilmiah dengan Open Journal System dan bereputasi pada bidang Administrasi Publik, Ilmu Komunikasi, dan Ilmu Pemerintahan</li>
+<li>Menyelenggarakan pengabdian masyarakat sesuai bidang ilmu yang mendorong kemampuan adaptasi dan inovasi tepat guna masyarakat untuk menjawab persoalan bangsa</li>
+<li>Modernisasi manajemen data pendidikan, penelitian dan pengabdian masyarakat serta penunjang pelayanan kemahasiswaan berbasis digital</li>
+
+</ol>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Akademik</h3>
+</center>
+<h4>Sarjana (S1)</h4>
+<ol>
+    <li>Ilmu Pemerintahan</li>
     <ul>
-        <li><a href="">Jurusan</a></li>
-        <li><a href="">Lokasi</a></li>
-        <li><a href="">Sosial Media</a></li>
+        <li>Pendidikan Anti Korupsi</li>
+        <li>Perubahan Sosial Politik</li>
+        <li>Sistem Pemerintahan Indonesia</li>
+        <li>Sistem Politik Indonesia</li>
+        <li>Hukum Tata Negara</li>
     </ul>
-</div>
+    <br>
+    <li>Administrasi Publik</li>
+    <ul>
+        <li>Kebijakan Publik</li>
+        <li>Analisis Kebijakan</li>
+        <li>Manajemen Publik</li>
+        <li>Evaluasi Kebijakan</li>
+        <li>Formulasi Kebijakan</li>
+    </ul>
+    <br>
+
+    <li>Ilmu Komunikasi</li>
+    <ul>
+        <li>Komunikasi Antar Pribadi</li>
+        <li>Komunikasi Organisasi</li>
+        <li>Komunikasi Antar Budaya</li>
+        <li>Protokoler</li>
+<li>Teori Komunikasi</li>
+    </ul>
+
+</ol>
+<hr>
+<br>
+<hr>
+
 </body>
 </html>
 
 <style>
-    .nav{
-        background-color: bisque;
-    }
-    ul{
-        list-style-type: none;
-        padding-left: 10px;
-    }
-    li{
-        margin-bottom: 10px;
-        text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-top: 10px;
-        display: inline-block;
-        width: 100px;
-        height: 35px;
-    }
-    a{
-        color: black;
-        text-decoration: none;
-    }
-    li:hover{
-        background-color: cornsilk;
-        cursor: pointer;
-        transition: 0.5s;
+body {
+        background-image: linear-gradient(to right, #ffaebc, #6af2f0);
+			-webkit-text-size-adjust: 100%;
+            font-family: 'GILL sans', 'GILL Sans MT', Calibri, 'Trebuchet MS';
+      margin-left: 40px;
+      margin-right: 40px;
     }
 </style>
