--- a/fk/templates/fk-muka.html
+++ b/fk/templates/fk-muka.html
@@ -9,42 +9,88 @@
 <body>
     <center>
     <h1>Fakultas Kedokteran</h1>
+    <img src="\static\images\fkk.jpeg" height="280px">
+    <p>Fakultas Kedokteran (Cilegon)</p>
 </center>
-<div class="nav">
-    <ul>
-        <li><a href="">Jurusan</a></li>
-        <li><a href="">Lokasi</a></li>
-        <li><a href="">Sosial Media</a></li>
-    </ul>
-</div>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Sejarah Singkat</h3>
+</center>
+    <p style="text-align: justify;">Fakultas Kedokteran UNTIRTA merupakan fakultas baru di universitas Sultan Ageng Tirtayasa yang terbentuk sejak program studi pendidikan dokter disahkan berdasarkan SK Menteri Riset Teknologi dan Pendidikan Tinggi Republik Indonesia Nomor 283/KPT/I/2019. Program studi Kedokteran Untirta saat ini dibawah pengampuan FK UI.</p>
+<h4>Latar Belakang</h4>
+<p style="text-align: justify;">FK Untirta yang terdiri atas 5 Program Studi merupakan salah satu strategi untuk mendukung program kesehatan di Provinsi Banten.
+
+    Program Studi ini bertujuan untuk menghasilkanntenaga dokter yang kompeten di tingkat nasional dan internasional. Program studi kedokteran Untirta merupakan langkah strategis dalam memperluas peran UNTIRTA pada masalah kesehatan yang dihadapi masyarakat Indonesia pada umumnya dan masyarakat banten pada khususnya.</p>
+<p style="text-align: justify;">Program Studi Kedokteran UNTIRTA memperluas akses bagi putra dan putri terbaik lulusan SMA di Provinsi Banten.
+
+    Adanya skema beasiswa ikatan dinas dari pemda setempat sehingga setelah selesai pendidikan, mereka akan mengikuti kontrak sesuai dengan pemberi beasiswa pemerintah sesuai dengan asal.
+    
+    Selain ikatan dinas, Program studi pendidikan dokter Untirta terbuka untuk Putra Putri terbaik di luar Provinsi Banten melalui jalur Mandiri.</p>
+
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Pimpinan</h3>
+</center>
+<h4>Dekanat</h4>
+<img src="\static\images\dekan fk.png" height="250px">
+<p>Dr. dr. Siti Farida, M.Kes., Ph.D</p>
+<h4>Dekan</h4>
+<ol>
+    <li>Dr. dr. Desdiani, M.K.K, Sp.P.
+    </li>
+    <li>
+    dr. Siti Darifah, M.K.K
+    </li>
+    <li>Dr. dr. Omat Rachmat, Sp.Ot(K) Spine.
+    </li>
+</ol>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Visi dan Misi</h3>
+</center>
+<h4>Visi Fk Untirta 2019-2023</h4>
+<p>Terwujudnya FK UNTIRTA sebagai Integrated Smart and Green (It’s Green) Faculty yang unggul, Berkarakter dan Berdaya Saing di kawasan ASEAN tahun 2030 dengan keunggulan pada bidang kesehatan kerja</p>
+<h4>Misi Fk Untirta 2019-2023</h4>
+<ol>
+    <li>Meningkatkan kualitas, kuantitas, relevansi dan daya saing pendidikan serta lulusan yang unggul, berkarakter dan berdaya saing di kawasan ASEAN dengan keunggulan pada bidang kesehatan kerja</li>
+    <li>Meningkatkan kualitas dan kuantitas penelitian dan pengabdian kepada masyarakat yang inovatif berbasis kebutuhan nyata sesuai perkembangan zaman dengan keunggulan pada bidang kesehatan kerja</li>
+    <li>Meningkatkan daya dukung tata kelola fakultas yang baik sebagai implementasi dari Integrated Smart and Green (It’s Green) Faculty</li>
+    <li>Menciptakan iklim akademik yang mampu mendukung perwujudan visi Untirta Untirta</li>
+
+</ol>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Akademik</h3>
+</center>
+<h4>Program Studi</h4>
+<ol>
+    <li>Kedokteran</li>
+    <li>keperawatan S1</li>
+    <li>Keperawatan D3</li>
+    <li>Ilmu Gizi</li>
+    <li>Ilmu Keolahragaan</li>
+</ol>
+<hr>
+<br>
+<hr>
+
 </body>
 </html>
 
 <style>
-    .nav{
-        background-color: bisque;
-    }
-    ul{
-        list-style-type: none;
-        padding-left: 10px;
-    }
-    li{
-        margin-bottom: 10px;
-        text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-top: 10px;
-        display: inline-block;
-        width: 100px;
-        height: 35px;
-    }
-    a{
-        color: black;
-        text-decoration: none;
-    }
-    li:hover{
-        background-color: cornsilk;
-        cursor: pointer;
-        transition: 0.5s;
+  body {
+        background-image: linear-gradient(to right, #ffaebc, #6af2f0);
+			-webkit-text-size-adjust: 100%;
+            font-family: 'GILL sans', 'GILL Sans MT', Calibri, 'Trebuchet MS';
+      margin-left: 40px;
+      margin-right: 40px;
     }
 </style>
