--- a/fkip/templates/fkip-muka.html
+++ b/fkip/templates/fkip-muka.html
@@ -9,42 +9,106 @@
 <body>
     <center>
     <h1>Fakultas Keguruan dan Ilmu Pendidikan</h1>
+    <img src="\static\images\fkip.png" height="280px">
+    <p>Fakultas Keguruan dan Ilmu Pendidikan (Ciwaru)</p>
 </center>
-<div class="nav">
-    <ul>
-        <li><a href="">Jurusan</a></li>
-        <li><a href="">Lokasi</a></li>
-        <li><a href="">Sosial Media</a></li>
-    </ul>
-</div>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Sejarah Singkat</h3>
+</center>
+<p style="text-align: justify;">Pada awal berdiri, Fakultas Keguruan dan Ilmu Pendidikan bermula dari STKIP dimana kegiatan perkuliahan dimulai pada 1 oktober 1982, yang terdiri dari 2 Prodi yaitu, Prodi IPPS-Pls dan Administrasi Pendidikan dengan jenjang pendidikan Sarjana (S.1). 
+    Program studi Pendidikan Luar Sekolah (PLS) berlokasi di Serang, dan Program Studi Administrasi Pendidikan di Pandeglang. Program Studi Administrasi Pendidikan mengalami fisingout oleh pemerintah, sehingga sejak tahun 1987 sampai dengan sekarang tidak menerima mahasiswa baru lagi. </p>
+<p style="text-align: justify;">Pada masa menjelang passing out tersebut tercetus ide bersama untuk mengganti program studi dan berdirilah Program Studi Bahasa dan Sastra Indonesia pada tahun 1986. Karena ada beberapa kendala untuk mengurus status akreditasinya, maka Program Studi Diksatrasia bermerger dengan STKIP Galuh Ciamis.
+     Sesuai dengan dinamika yang terjadi Program Studi Diksatrasia pada tahun 1990 beralih lokasi Operasional perkuliahan dari Pandeglang ke Serang sampai dengan sekarang. Baru pada tahun 1994 Prodi Diksatrasia memperoleh status terdaftar dengan surat keputusan Mendikbud RI nomor: 226/DIKTI/KEP/1992.</p>
+<p style="text-align: justify;">Tuntutan kebutuhan masyarakat terus berkembang terhadap FKIP dan untuk menjawab hal itu, maka pada tahun 1994 dibuka Program Pendidikan Guru Taman Kanak-kanak (PGTK) dengan surat keputusan yayasan Pendidikan Tirtayasa. 
+    Berikutnya, pada tahun 2004 dibuka juga Program Studi Pendidikan Bahasa Inggris (S.1) dengan izin operasional Dikti Depdiknas RI nomor: 1254/D/T/2003.</p>
+<p style="text-align: justify;">Pada tahun 2002 dibuka kembali dua Program Studi yakni Pendidikan Biologi dan Pendidikan Matematika sekaligus mengusulkan status D.2 PGTK dan keluarlah izin operasional ketiga program studi itu dengan surat keputusan Dirjen Dikti Depdiknas RI nomor: 2098/D/T/2004, 
+    akan tetapi sekarang program D.2 PGTK telah diubah menjadi Program S.1 PG PAUD dengan surat keputusan Menteri Pendidikan Nasional Nomor: 105/D/O/2010.</p>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Pimpinan</h3>
+</center>
+<h4>Dekanat</h4>
+<img src="\static\images\dekanat fkip.jpg" height="250px">
+<p>Dr. Dase Erwin Juansah, M.Pd.</p>
+<h4>Dekan</h4>
+<table>
+    <tr>
+        <td><img src="\static\images\dekan 1 fkip.png" height="250px">
+        <p>Dr. Suroso Mukti Leksono, M.Si.</p>
+        <p>(Wakil Dekan Bidang Akademik, Pengembangan Inovasi Pengabdian dan Hilirisasi Riset)</p>
+    </td>
+        <td><img src="\static\images\dekan 2 fkip.jpg" height="250px">
+        <p>Dr. Heni Pujiastuti, M.Pd.</p>
+        <p>(Wakil Dekan Bidang Administrasi Umum, Perencanaan, Pengelolaan Keuangan, SDM dan Fasilitas)</p>
+    </td>
+        <td><img src="\static\images\dekan 3 fkip.png" height="250px">
+        <p>Damanhuri, M.Pd.</p>
+        <p>(Wakil Dekan Bidang Kemahasiswaan, Alumni, dan Penguatan Kemitraan)</p></td>
+    </tr>
+</table>
+<hr>
+<br>
+<hr>
+<center>
+    <h3>Visi dan Misi</h3>
+</center>
+<h4>Visi Fkip Untirta 2019-2023</h4>
+<p>Mewujudkan FKIP sebagai fakultas yang Unggul dalam bidang pendidikan, 
+    Berkarakter dan Berdaya Saing di Tingkat Nasional dan Kawasan ASEAN Tahun 2030</p>
+<h4>Misi Fkip Untirta 2019-2023 </h4>
+<ol>
+    <li>Meningkatkan kualitas sumber daya dosen, tenaga kependidikan, mahasiswa dan alumni yang unggul berkarakter, dan berdaya saing di kawasan ASEAN</li>
+    <li>Meningkatkan kualitas pengajaran yang inovatif, penelitian dan pengabdian pada masyarakat dalam bidang pendidikan</li>
+    <li>Meningkatkan kualitas tata kelola fakultas yang akuntabel, transparan dan profesional</li>
+    <li>Pengembangan sarana dan prasarana kampus yang ilmiah berbasis teknologi informasi</li>
+
+</ol>
+<hr>
+<br>
+<hr>
+<center>
+<h3>Akademik</h3>
+</center>
+<h4>Sarjana (S1)</h4>
+<ol>
+    <li>Program studi Pendidikan Luar Sekolah (PLS)</li>
+    <li>Pendidikan Guru Sekolah Dasar (PGSD)</li>
+    <li>Pendidikan Anak Usia Dini (PG PAUD)</li>
+    <li>Pendidikan Bahasa dan Sastra Indonesia (Dikstrasia)</li>
+    <li>Pendidikan Bahasa Inggris</li>
+    <li>Pendidikan Matematika</li>
+    <li>Pendidikan Biologi</li>
+    <li>Pendidikan Bimbingan dan Konseling</li>
+    <li>Pendidikan Luar Biasa (PLB)</li>
+    <li>Pendidikan Sendratasik</li>
+    <li>Pendidikan Kewarganegaraan (PKn)</li>
+    <li>Pendidikan Sejarah</li>
+    <li>Pendidikan Sosiologi</li>
+    <li>Pendidika Fisika</li>
+    <li>Pendidikan Kimia</li>
+    <li>Pendidikan IPA</li>
+    <li>Pendidikan Teknik Elektro</li>
+    <li>Pendidikan Teknik Mesin</li>
+</ol>
+<hr>
+<br>
+<hr>
+
+
 </body>
 </html>
 
 <style>
-    .nav{
-        background-color: bisque;
-    }
-    ul{
-        list-style-type: none;
-        padding-left: 10px;
-    }
-    li{
-        margin-bottom: 10px;
-        text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-top: 10px;
-        display: inline-block;
-        width: 100px;
-        height: 35px;
-    }
-    a{
-        color: black;
-        text-decoration: none;
-    }
-    li:hover{
-        background-color: cornsilk;
-        cursor: pointer;
-        transition: 0.5s;
+  body {
+        background-image: linear-gradient(to right, #ffaebc, #6af2f0);
+			-webkit-text-size-adjust: 100%;
+            font-family: 'GILL sans', 'GILL Sans MT', Calibri, 'Trebuchet MS';
+      margin-left: 40px;
+      margin-right: 40px;
     }
 </style>
